--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   model_viewer_plus: ^1.5.0
+  native_ar_viewer: ^0.0.2
+  path_provider: ^2.0.14
+  flutter_downloader: ^1.10.2
 
 dev_dependencies:
   flutter_test:
